--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&family=Poppins:wght@400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro&family=Poppins:wght@400&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
