--- a/src/estilos/heroImg.css
+++ b/src/estilos/heroImg.css
@@ -18,7 +18,7 @@
   z-index: -1;
 }
 
-.heading {
+/*{.heading {
   width: 100%;
   height: 100%;
   display: flex;
@@ -27,7 +27,7 @@
   align-items: center;
   padding-left: 90px;
   padding-right: 90px;
-}
+}}*/
 
 .hero-img .content {
   position: absolute;
