--- a/src/estilos/navbar.css
+++ b/src/estilos/navbar.css
@@ -42,6 +42,32 @@
   z-index: 4;
 }
 
+/*{SUBMENU}*/
+
+.nav-menu li:hover .children {
+  display: block;
+}
+
+.nav-menu li .children {
+  display: none;
+  background-color: blue;
+  position: absolute;
+  width: 10%;
+  z-index: 1000;
+}
+
+.nav-menu li .children li {
+  display: block;
+  overflow: hidden;
+  border-bottom: 1px solid black;
+  padding: 5px;
+}
+
+.nav-menu li .children li:hover {
+  color: white;
+  transition: all 0.2s ease;
+}
+
 @media screen and (max-width: 700px) {
   .nav-menu {
     flex-direction: column;
@@ -73,5 +99,15 @@
 
   .head {
     height: 40px;
+  }
+
+  .nav-menu li .children li {
+    font-size: 1rem;
+  }
+
+  .nav-menu li .children {
+    width: 100%;
+    position: relative;
+    display: block;
   }
 }
