--- a/src/estilos/navbar.css
+++ b/src/estilos/navbar.css
@@ -29,9 +29,25 @@
   color: white;
   text-decoration: underline 0.2em rgba(255, 255, 255, 0);
   transition: text-decoration-color 300ms;
+  cursor: pointer;
 }
 
 .nav-menu li a:hover {
+  color: white;
+  transition: all 0.2s ease;
+  text-decoration-color: white;
+}
+
+p {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: white;
+  text-decoration: underline 0.2em rgba(255, 255, 255, 0);
+  transition: text-decoration-color 300ms;
+  cursor: pointer;
+}
+
+p:hover {
   color: white;
   transition: all 0.2s ease;
   text-decoration-color: white;
@@ -44,12 +60,13 @@
 
 /*{SUBMENU}*/
 
-.nav-menu li:hover .children {
-  display: block;
+.nav-menu li .sub-menu {
+  display: none;
 }
 
 .nav-menu li .children {
-  display: none;
+  display: block;
+  margin-top: 5px;
   background-color: blue;
   position: absolute;
   width: 10%;
@@ -68,11 +85,28 @@
   transition: all 0.2s ease;
 }
 
+/*{ICONOS}*/
+.material-icons {
+  font-family: 'Material Icons';
+  margin-top: 2.2px;
+  float: right;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.3rem;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+}
+
+
 @media screen and (max-width: 700px) {
   .nav-menu {
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     width: 100%;
     height: 100vh;
     background: rgba(123, 163, 124);
@@ -89,7 +123,7 @@
   }
 
   .nav-menu li {
-    padding: 1rem 0;
+    padding: 1rem 1em;
     font-size: 2rem;
   }
 
@@ -100,14 +134,33 @@
   .head {
     height: 40px;
   }
+  .nav-menu li .sub-menu {
+    display: none;
+  }
+
+  .nav-menu li .children {
+    display: block;
+    background-color: blue;
+    position: relative;
+    width: 100%;
+  }
 
   .nav-menu li .children li {
     font-size: 1rem;
   }
 
-  .nav-menu li .children {
-    width: 100%;
-    position: relative;
-    display: block;
+  .material-icons {
+    font-family: 'Material Icons';
+    margin-top: 2.2px;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 1.3rem;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
   }
+
 }
