--- a/src/estilos/productosList.css
+++ b/src/estilos/productosList.css
@@ -9,14 +9,11 @@
   text-align: center;
 }
 
-.card {
-  background: #444;
-  border: rgb(134, 33, 33) solid 3px;
-}
 
 .img-card {
   width: 100%;
-  border-bottom: rgb(134, 33, 33) solid 3px;
+  border-bottom: black solid 2.5px;
+  box-shadow: 0px 1px 5px grey;
 }
 
 @media screen and (max-width: 800px) {
